--- a/periodic_table.tex
+++ b/periodic_table.tex
@@ -89,7 +89,7 @@
 \tikzstyle{DetailsLabel} = [minimum height = 2.5cm, inner sep=0pt, text width = 35cm]
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% this macro is used to add contents to each 'box' for each element
+% this macro is used to add contents to each 'box' for each ele
 % parameter list is as follows:
 %   #1: symbol 
 %   #2: element name 
