--- a/periodic_table.tex
+++ b/periodic_table.tex
@@ -376,11 +376,11 @@
 
     % details
     \node[below of=Ac, anchor=west, name=details,DetailsLabel,yshift=-1.7cm]{
-        \char"2020 Standard atomic weights (average terrestrial atomic weight) taken from the Commission on Isotopic Abundances and Atomic Weights (\url{http://www.ciaaw.org/abridged-atomic-weights.htm}). If CIAAW indicates a range for the standard atomic weight of an element, I used the arithmetic mean of the boundaries of the range. Elements with atomic weight in parentheses (e.g., Francium (223)) have no known stable isotopes. Therefore, the mass of a representative isotope is provided. \\
+        \char"2020 Standard atomic weights (average terrestrial atomic weight) taken from the Commission on Isotopic Abundances and Atomic Weights (\url{http://www.ciaaw.org/abridged-atomic-weights.htm}). If CIAAW indicates a range for the standard atomic weight of an element, I used the arithmetic mean of the boundaries of the range. Elements with atomic weight in parentheses (e.g., Francium (223)) have no known stable isotopes and it is therefore impossible to provide a standard atomic weight. For these elements, the mass of a representative isotope is provided. \\
         % \char"02DA Indicates an anomalous (Aufbau rule-breaking) ground state electron configuration.\\
         Corner images of tRNA were taken from \url{https://commons.wikimedia.org/wiki/User:Yikrazuul} \\
-        Inspired by Ivan Griffin's \LaTeX\space Periodic Table. \LaTeX\space code released under the MIT open source license. \\
-        Final product (the Table) is released under creative commons attribution/share-alike terms. \ccLogo \ccAttribution \ccShareAlike\space \the\year. Paul N. Danese
+        Inspired by Ivan Griffin's \LaTeX\space Periodic Table. \LaTeX\space code is released under the MIT open source license. \\
+        Final product (this Table) is released under creative commons attribution/share-alike terms. \ccLogo \ccAttribution \ccShareAlike\space \the\year. Paul N. Danese
     };
 
     \end{tikzpicture}
