added temp conversions

--- a/periodic_table.tex
+++ b/periodic_table.tex
@@ -471,6 +471,8 @@
     \begin{itemize}
         \item 1 mole \( = \) \num{6.0221e23} things
         \item \( \textrm{Kelvin} = \si{\degreeCelsius} + \num{273.15} \)
+        \item \( \textrm{\degree F} = 1.8 \times \si{\degreeCelsius} + \num{32} \)
+        \item \( \si{\degreeCelsius} = \dfrac{(\textrm{\degree F} - \num{32})}{\num{1.8}} \)
         \item \( \textrm{pH} = \num{-1} \times  \log [\hydronium{}] \)
         \item \( \SI{1000}{\milli \liter} = \SI{1}{\liter} \)
         \item \( \grams{1000} = \SI{1}{\kilo \gram} \)
