removing some unnecessary prose from 101 branch

--- a/periodic_table.tex
+++ b/periodic_table.tex
@@ -384,8 +384,8 @@
     \periodicbox{Sy}{element}{Z}{saw}{$\chi$}{s}{s}{above of=V,yshift=2.4cm}{}
     \node[right of=Sy, name=keyvalues, KeysLabel, xshift=4.5cm]{
     \textsf{Z: atomic number}\newline
-    \(\chi\): \textsf{Pauling electronegativity}\newline
-    \textsf{s\textit{s}: last occupied subshell} \newline
+    %\(\chi\): \textsf{Pauling electronegativity}\newline
+    %\textsf{s\textit{s}: last occupied subshell} \newline
 
     Sy: \textsf{symbol} \newline
     \textsf{element: element name}\newline
@@ -425,7 +425,7 @@
     % details
     \node[below of=Ac, anchor=west, name=details,DetailsLabel,yshift=-1.7cm]{
         \char"2020 Standard atomic weights (average terrestrial atomic weight) taken from the Commission on Isotopic Abundances and Atomic Weights (\url{http://www.ciaaw.org/abridged-atomic-weights.htm}). If CIAAW indicates a range for the standard atomic weight of an element, I used the arithmetic mean of the boundaries of the range. Elements with atomic weight in parentheses (e.g., Francium (223)) have no known stable isotopes and it is therefore impossible to provide a standard atomic weight. For these elements, the mass of a representative isotope is provided. \\
-        \char"02DA Indicates an anomalous (Aufbau rule-breaking) ground state electron configuration.\\
+        %\char"02DA Indicates an anomalous (Aufbau rule-breaking) ground state electron configuration.\\
         Inspired by Ivan Griffin's \LaTeX\space Periodic Table. \LaTeX code is released under the MIT open source license. \\
         Final product (this Table) is released under creative commons attribution/share-alike copyright terms. \ccLogo \ccAttribution \ccShareAlike\space \the\year. Paul N. Danese
         };
