--- a/periodic_table.tex
+++ b/periodic_table.tex
@@ -29,7 +29,16 @@
 \documentclass[9pt]{article}
 \usepackage{geometry}
 \usepackage{ccicons}
-\usepackage{chem}
+%\usepackage[per-mode=symbol]{siunitx} % SI units for the nerds. per-mode=symbol means we don't use negative exponents to represent units that are in the denominator (b/c it freaks out the kiddies){siunitx}
+%\sisetup{detect-weight=true, detect-family=true} % allow bold-face and italic siunits
+%\usepackage{chemformula}
+\usepackage{chemfig}
+%\usepackage{gensymb}
+%\usepackage{chemmacros}
+%\usepackage{xspace}
+\setchemfig{atom sep=2.4em, double bond sep=3.5pt, bond style={line width=1.5pt}}
+
+%\usepackage{chem}
 \usepackage{chemmacros}
 \usepackage{multicol}
 \usepackage{siunitx}
@@ -167,6 +176,7 @@
 % name text position shading
 \newcommand{\groupbox}[4]{\node[name=#1, Offsetter, #3, #4,yshift=1mm] {\periodicelement{\pendash}{\pendash}{\pendash}{\textsf{#2}}{\pendash}{\pendash}{\pendash}};}
 
+% for showing the period number
 \newcommand{\periodbox}[3]{\node[name=#1,left of=#2,xshift=-16pt]{\textsf{\textit{#3}}};}
 
 % this macro is used to add element-specific data to each box.
