typo with potassium

--- a/periodic_table.tex
+++ b/periodic_table.tex
@@ -201,8 +201,7 @@
     \periodicbox{H}{hydrogen}{1}{1.008}{2.20}{1}{s}{below of=blank2}{Sblock}
     \periodicbox{Li}{lithium}{3}{6.9675}{0.98}{2}{s}{below of=H}{Sblock}
     \periodicbox{Na}{sodium}{11}{22.99}{0.93}{3}{s}{below of=Li}{Sblock}
-    \periodicbox{K}{potas\\
-    	m}{19}{39.098}{0.82}{4}{s}{below of=Na}{Sblock}
+    \periodicbox{K}{potassium}{19}{39.098}{0.82}{4}{s}{below of=Na}{Sblock}
     \periodicbox{Rb}{rubidium}{37}{85.468}{0.82}{5}{s}{below of=K}{Sblock}
     \periodicbox{Cs}{caesium}{55}{132.91}{0.79}{6}{s}{below of=Rb}{Sblock}
     \periodicbox{Fr}{francium}{87}{(223)}{\pendash}{7}{s}{below of=Cs}{Sblock}
